--- a/gateway-service.yml
+++ b/gateway-service.yml
@@ -1,5 +1,6 @@
 zuul:
+  ignoredServices: '*'
   routes:
-    sample:
-      path: /sample/**
-      serviceId: sample-client
+      sample-client:
+          path: /sample-client/**
+          service-id: SAMPLE-CLIENT
