--- a/sample-client.properties
+++ b/sample-client.properties
@@ -1,2 +1,9 @@
-test.config.name:Good Morning
-message:Hello Azure
+
+profile1:
+  test.config.name:Good Morning
+  message:Hello Azure
+
+
+profile2:
+  test.config.name:Good Morning 2
+  message:Hello Azure 2
