--- a/sample-client.properties
+++ b/sample-client.properties
@@ -1,9 +1,7 @@
+spring.profiles:profile1
+test.config.name:Good Morning
+message:Hello Azure
 
-profile1:
-  test.config.name:Good Morning
-  message:Hello Azure
-
-
-profile2:
-  test.config.name:Good Morning 2
-  message:Hello Azure 2
+spring.profiles:profile1
+test.config.name:Good Morning 2
+message:Hello Azure 2
